# nellcko-bingo-bot

./: LICENSE  devenv.nix  pyproject.toml
bingo-bot/: __main__.py
