[tool.poetry]
name = "bingo-bot"
version = "0.1.0"
description = "Bot pour le bingo de Nellcko"
authors = ["Victor Bonnelle <victor.bonnelle@proton.me>"]

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
py-cord = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
